# plover-drills

./: .gitignore  Justfile  README.md  biome.jsonc  flake.nix  index.html  main.py  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  vite.config.ts
.github/workflows/: main.yml
drill/: layout.py  main.py  runner.py  types.py  utils.py  widgets.py
drill/types/: layout.py
drills/: README.md
drills/Lapwing/: monkeytype-english-200.txt
drills/Mejiro/: 1-あいうえお.txt  man_1_基本入力_1_大和言葉(1_stroke).txt  man_1_基本入力_2_大和言葉(2_stroke).txt  man_1_基本入力_3_外来語(1_stroke).txt  man_1_基本入力_4_外来語(2_stroke).txt  man_1_基本入力_5_二次熟語.txt  動詞_上一段活用.txt  動詞_下一段活用.txt  動詞_五段活用.txt
lessons/: README.md
public/: drills-gen.json
public/drills-gen/: Lapwing.json
src/: App.module.scss  App.tsx  Drill.module.scss  Drill.scss.module  Drill.tsx  LessonSelector.module.scss  LessonSelector.tsx  MyCheckbox.tsx  MyCombobox.tsx  ShuffleCheckbox.tsx  Stroke.module.scss  Stroke.tsx  System.tsx  index.css  keyboard.ts  keyboard.tsx  main.py  main.tsx  stroke.tsx  system.tsx  utils.ts
src/drill/: Lapwing.tsx
src/keyboard/: mejiro31.tsx  style.module.scss  types.ts  uniV4.tsx
src/stroke/: UniV4.tsx  mejiro31.tsx  style.module.scss  uniV4.module.scss  uniV4.tsx
src/system/: Lapwing.tsx  Mejiro.tsx  lapwing.tsx  mejiro.tsx  utils.ts
