[project]
name = "plover-drills"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "colorama>=0.4.6",
    "plover>=4.0.1",
    "plover-lapwing-aio>=1.4.0",
    "pyqt5>=5.15.11",
]

[dependency-groups]
dev = [
    "pyright>=1.1.401",
    "ruff>=0.11.12",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["I"]

